# HAlign4

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  stmsa.cpp
PairwiseAlignment/: NeedlemanWunshReusable.cpp  NeedlemanWunshReusable.hpp
StarAlignment/: StarAligner.cpp  StarAligner.hpp
SuffixArray/: SuffixArray.hpp
Utils/: Arguments.cpp  Arguments.hpp  Fasta.cpp  Fasta.hpp  Graph.cpp  Graph.hpp  Insertion.hpp  Pseudo.hpp  Utils.cpp  Utils.hpp
multi-thread/: multi.hpp
